--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ table {
 /* 시작 */
 
 #header {
-    border: 1px solid black;
+    border: 1px solid rgb(230, 227, 227);
     height: 40px;
     padding-top:12px;
 }
@@ -93,40 +93,76 @@ table {
 }
 
 #middle {
-    border: 1px solid black;
+    /* border: 1px solid rgb(211, 26, 26); */
     height: 146px;
-    /* position: fixed; top: 0px; */
+    position: sticky;
+    top: 0px;
 }
 
 #middle_wrap {
-    border: 1px solid red;
+    /* border: 1px solid rgb(187, 186, 186); */
     height: 100%;
-    width: 1024px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    margin-top: 36px;
+    padding : 0px 100px 0px 100px;
 }
 
-.middle_content {
-    border: 1px solid green;
-    height: 100%;
+.middle_content1 {
+    /* border: 1px solid rgb(187, 186, 186); */
+    height: 40px;
+    width: 100%;
     flex-grow: 1;
     flex-basis: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.middle_content2 {
+    /* border: 1px solid rgb(187, 186, 186); */
+    height: 70px;
+    width: 100%;
+    flex-grow: 1;
+    flex-basis: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 button {
     background-color: transparent;
+    border: 2px solid rgb(255, 255, 255);
     cursor: pointer;
     outline: none;
 }
 
 .search {
-    border: 2px solid red;
+    border: 2px solid rgb(255, 0, 0);
     width: 460px;
     height: 40px;
     box-sizing: border-box;
     position: relative;
+    display: flex;
+    justify-content: space-between;
+}
+
+.search_content {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0px 15px;
+    justify-content: space-between;
+}
+
+.search_input {
+    border: 2px solid rgb(255, 255, 255);
+    flex-grow: 1;
+}
+
+.search_img {
+    border: 2px solid rgb(255, 255, 255);    
 }
 
 .content {
@@ -136,10 +172,94 @@ button {
     background: black;
 }
 
+.logo {
+    margin-right: 100px;
+    width: 136px;
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
+    flex-basis: 0;
+}
 
+.menu {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    flex-grow: 1;
+}
 
+.menu_content {
+    margin-left: 30px;
+    display: flex;
+    align-items: center;
+    position: relative;
+}
 
 #body {
-    border: 1px solid black;
+    border: 1px solid rgb(230, 227, 227);
     height: 4000px;
+}
+
+.body_first {
+    /* border: 1px solid rgb(255, 0, 0); */
+    position: relative;
+    height: 300px;
+    margin: 0px auto;
+    background: white;
+    display: flex;
+    justify-content: center;
+}
+
+.body_content1 {
+    /* border: 1px solid rgb(255, 0, 0); */
+    width: 1063px;
+    height: 300px;
+    background: rgb(0, 0, 0);
+}
+
+.body_second {
+    /* border: 1px solid rgb(55, 0, 255); */
+    background: white;
+    position: relative;
+    margin: 16px auto 0px;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+}
+
+.body_content2 {
+    position: absolute;
+    width: 1063px;
+    height: 100%;
+    display: block;
+}
+
+#section {
+    /* border: 1px solid rgb(0, 255, 42); */
+    height: 3000px;
+    margin: 0px 99px 0px 99px;
+    padding: 56px 0px 24px 0px;
+}
+
+h2 {
+    font-size: 1.5rem;
+    margin-bottom: 1.5rem;
+}
+
+.list {
+    width: 1063px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-grow: 1;
+    flex-basis: 0;
+}
+
+.product {
+    border: 1px solid rgb(0, 0, 0);
+    width: 196px;
+    height: 276px;
+    margin-right: 11px;
+    margin-bottom: 11px;
+    flex-grow: 1;
+    display: flex;
 }
