--- a/first/src/style.css
+++ b/first/src/style.css
@@ -302,3 +302,143 @@ h2 {
     width: 15px;
     height: 30px;
 }
+
+.middle_content3 {
+    position: absolute;
+    top: 102px;
+    right: calc(50% - 617px);
+    z-index: 20;
+}
+
+.banner {
+    width: 90px;
+}
+
+.banner_first {
+    padding: 10px;
+    width: 100%;
+    border: 1px solid rgb(204, 204, 204);
+    background: rgb(255, 255, 255);
+    margin-bottom: 6px;
+}
+
+.banner_second {
+    padding: 10px;
+    width: 100%;
+    border: 1px solid rgb(204, 204, 204);
+    background: rgb(255, 255, 255);
+    margin-bottom: 6px;
+}
+
+.banner_third {
+    padding: 10px;
+    width: 100%;
+    border: 1px solid rgb(204, 204, 204);
+    background: rgb(255, 255, 255);
+    margin-bottom: 6px;
+}
+
+.banner_four {
+    margin-bottom: 0px;
+    padding: 0px;
+    border-color: rgb(229, 229, 229);
+}
+
+.first {
+    font-size: 12px;
+    font-weight: 600;
+    color: rgb(102, 102, 102);
+    text-align: center;
+    margin-bottom: 8px;
+}
+
+.first_1 {
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+}
+
+.first_2 {
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    font-size: 12px;
+    color: rgb(204, 204, 204);
+    font-weight: 600;
+}
+
+.second {
+    font-size: 12px;
+    font-weight: 600;
+    color: rgb(102, 102, 102);
+    text-align: center;
+    margin-bottom: 8px;
+}
+
+.second_1 {
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+
+.second_1_1 {
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    font-size: 12px;
+    color: rgb(247, 0, 0);
+    font-weight: 600;
+    width: 38px;
+    border-bottom: 2px dotted rgb(136, 136, 136);
+}
+
+.second_2 {
+    height: 120px;
+    display: flex;
+    flex-direction: column;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    color: rgb(204, 204, 204);
+    font-size: 12px;
+}
+
+.third {
+    font-size: 12px;
+    font-weight: 600;
+    color: rgb(102, 102, 102);
+    text-align: center;
+    margin-bottom: 8px;
+}
+
+.third_1 {
+    box-shadow: rgb(0 0 0 / 12%) 0px 0px 7px 0px;
+    margin: 16px auto 6px;
+    width: 66px;
+    height: 66px;
+    padding: 8px;
+}
+
+.third_2 {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.four {
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    height: 40px;
+    width: 100%;
+    font-weight: 600;
+    font-size: 13px;
+    color: rgb(102, 102, 102);
+    background-color: transparent;
+    cursor: pointer;
+    outline: none;
+}
